# generator-plain-c-project

./: LICENSE  README.md  package.json
app/: index.js
app/templates/: Makefile.am  configure.ac
app/templates/src/: Makefile.am  helper.c  main.c
app/templates/src/lib/: Makefile.am  cplain.c  lib_example.c
